# inf552-proj

./: CMakeLists.txt  RANSAC-impl.cpp  RANSAC.cpp  RANSAC.h  image.h  pano.cpp
report/: report.tex
report/plots/: ransac1.csv  ransac2.csv  ransac3.csv  ransac4.csv
src/: RANSAC.h  RANSAC.tpp  main.cpp  pano.cpp  pano.h
test/: ransac_test.cpp
